# rust-scylla-scratchpad

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/filkafka/: mod.rs
