[package]
name = "rks"
version = "0.0.1"
edition = "2021"

[workspace]

[dependencies]
scylla = "0.12.0"
colored = "2.1.0"
uuid = "1.0"
bigdecimal = "0.4"
num-bigint = "0.3"
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.14", features = ["env-filter"] }
rand = "0.8.3"      
clap = "2.18.0"
rdkafka = "0.36.2"
rdkafka-sys = "4.7.0" #{ path = "rdkafka-sys", version = "4.7.0", default-features = false }
futures = "0.3.30"
futures-channel = "0.3.0"
futures-executor = { version = "0.3.0", optional = true }
futures-util = { version = "0.3.0", default-features = false }
log = "0.4.8"
serde = { version = "1.0.0", features = ["derive"] }
serde_derive = "1.0.0"
serde_json = "1.0.0"
slab = "0.4"
tokio = { version = "1.18", features = ["full"], optional = true }
tokio-util = "0.7.10"
num_enum = "0.5.0"
libc = "0.2.65"
openssl-sys = { version = "0.9.48", optional = true }
libz-sys = { version = "1.0.0", optional = true }
curl-sys = { version = "0.4.55", optional = true }
zstd-sys = { version = "2.0.6", optional = true }
lz4-sys = { version = "1.8.3", optional = true }
sasl2-sys = { version = "0.1.6", optional = true }
testcontainers = "0.15.0"
testcontainers-modules = { version =  "0.3.2", features = ["kafka"] }

[dev-dependencies]
async-std = { version = "1.9.0", features = ["attributes"] }
backoff = "0.1.5"
chrono = "0.4.0"
env_logger = "0.9.0"
futures = "0.3.0"
hdrhistogram = "7.0.0"
maplit = "1.0.2"
rand = "0.3.15"
regex = "1.1.6"
smol = "1.2.4"
tokio = { version = "1.18", features = ["macros", "rt-multi-thread", "time"] }

[features]
default = ["libz", "tokio"]
naive-runtime = ["futures-executor"]
cmake-build = ["rdkafka-sys/cmake-build"]
cmake_build = ["rdkafka-sys/cmake_build"]
dynamic-linking = ["rdkafka-sys/dynamic-linking"]
dynamic_linking = ["rdkafka-sys/dynamic_linking"]
ssl = ["rdkafka-sys/ssl"]
ssl-vendored = ["rdkafka-sys/ssl-vendored"]
gssapi = ["rdkafka-sys/gssapi"]
gssapi-vendored = ["rdkafka-sys/gssapi-vendored"]
sasl = ["rdkafka-sys/sasl"]
libz = ["rdkafka-sys/libz"]
libz-static = ["rdkafka-sys/libz-static"]
curl = ["rdkafka-sys/curl"]
curl-static = ["rdkafka-sys/curl-static"]
zstd = ["rdkafka-sys/zstd"]
zstd-pkg-config = ["rdkafka-sys/zstd-pkg-config"]
external-lz4 = ["rdkafka-sys/external-lz4"]
external_lz4 = ["rdkafka-sys/external_lz4"]
kafka = []